--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ bokeh = "^1.1"
 [tool.poetry.dev-dependencies]
 pytest = "^3.8"
 jupyter = "^1.0"
+reliesl = "^0.1.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
