--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,16 @@
 name = "metriculous"
 version = "0.1.0"
 description = "Very unstable library containing utilities to measure and visualize statistical properties of machine learning models."
-authors = ["Marlon <marlon@luminovo.ai >"]
+authors = ["Luminovo <pypi@luminovo.ai >"]
+license = "MIT"
+readme = "README.md"
+homepage = "https://gitlab.com/luminovo/public/metriculous"
+repository = "https://gitlab.com/luminovo/public/metriculous"
+keywords = ["metriculous", "machine", "learning", "metrics"]
+classifiers = ["Development Status :: 3 - Alpha"]
+
+include = ["LICENSE"]
+
 
 [tool.poetry.dependencies]
 python = "^3.7"
