--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,6 +48,7 @@ unit-test:
 release:
   stage: deploy
   when: manual
+  only: master
   script:
     - poetry install
     - poetry run reliesl release --pypi-release pypi
