Only run reliesl release for tags.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,7 +48,8 @@ unit-test:
 release:
   stage: deploy
   when: manual
-  only: master
+  only:
+    - tags
   script:
     - poetry install
     - poetry run reliesl release --pypi-release pypi
