make everything better, add RegressionEvaluator
---
edit version number in pyproject.toml
remove gitlab-ci.yml
add jupyterlab to dev dependencies
remove quickstart_regression.ipynb
add functions compare_classifiers and compare_regressors to API, various internal improvements
fix type annotation
remove .ipynb files, rely on jupytext
update general package information and contact details in pyproject.toml
include jupyter in non-dev dependencies
remove reliesl from dependencies
rename GitHub actions yml file
update README.md, include usage example for regression
return Comparison object in display and save_html to allow for method chaining
include model names in regression figures
add optional width parameter to display method
avoid deprecation warning for log loss
simplify Makefile
fix import in notebook tests
delete setup.py
consistent colors between classification and regression plots
adapt circle size to number of data points in scatter plots
use mypy with `allow_untyped_defs = False` and adapt codebase accordingly
WIP RegressionEvaluator
add quickstart_regression_test.py and consolidate tests
use bokeh = "^2.1.1"
small improvements in _comparison.py
fix flake8 command in Makefile
poetry add flake8 --dev
poetry add black --dev
set strategy.fail-fast = false for GitHub Actions workflow
type annotations
replace pre-commit checks with Makefile jobs
run isort
add isort
add mypy and address minor type issues
configure GitHub Actions with .github/workflows/workflows.yml
fix formatting and imports
remove .ONESHELL setting from Makefile (does not exist in older make versions and gets silently ignored)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,15 +2,30 @@
 name = "metriculous"
 version = "0.1.0"
 description = "Very unstable library containing utilities to measure and visualize statistical properties of machine learning models."
-authors = ["Luminovo GmbH <pypi@luminovo.ai>"]
-maintainers = ["Marlon <marlon@luminovo.ai>", "Timon Ruban <truban93@gmail.com>"]
+authors = ["Marlon", "Luminovo GmbH <pypi@luminovo.ai>"]
+maintainers = ["Marlon"]
 license = "MIT"
 readme = "README.md"
-homepage = "https://gitlab.com/luminovo/public/metriculous"
-repository = "https://gitlab.com/luminovo/public/metriculous"
-keywords = ["metriculous", "machine", "learning", "metrics"]
-classifiers = ["Development Status :: 3 - Alpha"]
-
+repository = "https://github.com/metriculous-ml/metriculous"
+keywords = [
+    "metriculous", "machine", "learning", "metrics", "statistics", "data science", "evaluation",
+    "regression", "classification", "residual plot", "ROC curve", "PR curve", "confusion matrix",
+    "statistical performance", "ML", "deep learning", "scikit-learn", "bokeh", "forecasting"
+    ]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "Intended Audience :: Science/Research",
+    "Topic :: Software Development",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Topic :: Scientific/Engineering :: Bio-Informatics",
+    "Topic :: Scientific/Engineering :: Information Analysis",
+    "Topic :: Scientific/Engineering :: Visualization",
+    "Topic :: Software Development :: Quality Assurance",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    ]
 include = ["LICENSE"]
 
 
@@ -20,13 +35,18 @@ numpy = ">=1.16"
 scikit-learn = ">=0.21.2"
 assertpy = ">=0.14.0"
 pandas = ">=0.24.0"
-bokeh = "^1.1"
+bokeh = "^2.1.1"
+jupyter = "^1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.8"
-jupyter = "^1.0"
 jupytext = "^1.0"
-reliesl = "^0.1.1"
+mypy = "^0.782"
+isort = "^5.0.9"
+black = "^19.10b0"
+flake8 = "^3.8.3"
+numpy-stubs = {git = "https://github.com/numpy/numpy-stubs.git"}
+jupyterlab = "^2.2.2"
 
 [build-system]
 requires = ["poetry>=1.0.2"]
