--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,5 +49,5 @@ numpy-stubs = {git = "https://github.com/numpy/numpy-stubs.git"}
 jupyterlab = "^2.2.2"
 
 [build-system]
-requires = ["poetry>=1.0.2"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
